--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.1",
+    "chalk": "^4.1.0",
     "csv": "^5.3.2",
     "csv-generate": "^3.3.0",
     "tslib": "^1.14.1"
